syntax = "proto3";

package auction.auction;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "auction/auction/params.proto";
import "auction/auction/auction.proto";
import "auction/auction/bid.proto";
import "auction/auction/finalized_auction.proto";

option go_package = "auction/x/auction/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/auction/auction/params";
  
  }
  
  // Queries a list of Auction items.
  rpc Auction    (QueryGetAuctionRequest) returns (QueryGetAuctionResponse) {
    option (google.api.http).get = "/auction/auction/auction/{id}";
  
  }
  rpc AuctionAll (QueryAllAuctionRequest) returns (QueryAllAuctionResponse) {
    option (google.api.http).get = "/auction/auction/auction";
  
  }
  
  // Queries a list of Bid items.
  rpc Bid    (QueryGetBidRequest) returns (QueryGetBidResponse) {
    option (google.api.http).get = "/auction/auction/bid/{id}";
  
  }
  rpc BidAll (QueryAllBidRequest) returns (QueryAllBidResponse) {
    option (google.api.http).get = "/auction/auction/bid";
  
  }
  
  // Queries a list of FinalizedAuction items.
  rpc FinalizedAuction    (QueryGetFinalizedAuctionRequest) returns (QueryGetFinalizedAuctionResponse) {
    option (google.api.http).get = "/auction/auction/finalized_auction/{id}";
  
  }
  rpc FinalizedAuctionAll (QueryAllFinalizedAuctionRequest) returns (QueryAllFinalizedAuctionResponse) {
    option (google.api.http).get = "/auction/auction/finalized_auction";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetAuctionRequest {
  uint64 id = 1;
}

message QueryGetAuctionResponse {
  Auction Auction = 1 [(gogoproto.nullable) = false];
}

message QueryAllAuctionRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAuctionResponse {
  repeated Auction                                Auction    = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetBidRequest {
  uint64 id = 1;
}

message QueryGetBidResponse {
  Bid Bid = 1 [(gogoproto.nullable) = false];
}

message QueryAllBidRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBidResponse {
  repeated Bid                                    Bid        = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetFinalizedAuctionRequest {
  uint64 id = 1;
}

message QueryGetFinalizedAuctionResponse {
  FinalizedAuction FinalizedAuction = 1 [(gogoproto.nullable) = false];
}

message QueryAllFinalizedAuctionRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllFinalizedAuctionResponse {
  repeated FinalizedAuction                       FinalizedAuction = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination       = 2;
}

